--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ body{
       </div>
     </nav>
 
-    <<section class="hero">
+    <section class="hero">
   <div class="hero-inner">
     <div class="hero-media">
       <img src="./assets/IMG_20251004_211413.jpg" alt="Muhsin F" class="hero-photo">
