--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
                                 <h2 class="section-title mb-4">About Me</h2>
                                 <p class="about-text">
                                     I am a passionate Full Stack Developer who enjoys building complete web applications from front-end design to back-end logic. 
-                                    My background combines both <strong>Python frameworks (Django, Flask, FastAPI)</strong> and <strong>JavaScript-based development (Node.js, Express, MongoDB)</strong>. 
+                                    My background combines both <strong>Python frameworks (Django, Flask, FastAPI)</strong> and <strong>JavaScript-based development (Node.js, Express, MongoDB, PostgreSQL)</strong>. 
                                     I aim to create clean, scalable, and user-friendly solutions using modern technologies.
                                 </p>
                             </div>
